date fixes, swagger actualization, adding Periodicity to response
